COH-33235: Update to jersey 4.0.2. Backport from main. RQ: job.9.20260409064938.30828
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 119416]